tests/error/struct_errors/type_missing1.py
from guppylang.decorator import guppy


x = 42


@guppy.struct
class MyStruct:
    x


MyStruct.compile()
